mac config support added

--- a/PayTech.Motion.Utility.Starter/appsettings.json
+++ b/PayTech.Motion.Utility.Starter/appsettings.json
@@ -9,11 +9,13 @@
   ],
   "SharedConfig": {
     "ConfigPathWindows": "C:\\PayTech\\Motion\\Config\\motionsettings.json",
-    "ConfigPathLinux": "/paytech/motion/config/motionsettings.json"
+    "ConfigPathLinux": "/paytech/motion/config/motionsettings.json",
+    "ConfigPathMac": "../../../../../config/motionsettings.json"
   },
   "LoggerConfig": {
     "TracePathWindows": "C:\\PayTech\\Motion\\Logs\\Utility",
     "TracePathLinux": "/paytech/motion/logs/utility",
+    "TracePathMac": "../../../../../logs/utility",
     "TraceLevel": "All",
     "LogToConsole": "true"
   },
